# stable-pair-strategy

./: .gitignore  README.md  pyproject.toml
scripts/: plot_price_bounds.py  simulate_dynamic_range.py
src/stable_pair_strategy/: __init__.py  volatility_bounds.py
